# slm

./: .gitignore  EKITIL_WHITEPAPER.md  GOOGLE_TRC_GRANT.md  LICENSE  README.md  WHITEPAPER.md  agents.md  cloudrift.md  pyproject.toml  test_gec.py  www.youtube.com_cookies.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  (+1 more)
_hf_space_fix/: .gitignore  README.md  apache2.0  app.py  genned.json  pyproject.toml  requirements.txt
_hf_space_fix/data/: leaderboard.json
_hf_space_fix/m_data/: leaderboard.json
_hf_space_fix/src/: envs.py  populate.py
_hf_space_fix/src/display/: about.py  css_html_js.py  formatting.py  utils.py
_hf_space_fix/src/leaderboard/: build_leaderboard.py  filter_models.py  read_evals.py
_hf_space_fix/src/radial/: radial.py
_hf_space_fix/src/scripts/: create_request_file.py  update_all_request_files.py
_hf_space_fix/src/submission/: check_validity.py  submit.py
_hf_space_fix/src/tools/: collections.py  plots.py
autoresearch/: EXPERIMENT_LOG.md  bench_speed.py  deploy_and_run.sh  eval_gec_comprehensive.py  exp030_deploy.sh  exp030_eval.py  exp030_eval_all.sh  exp030_final.sh  exp030_launch_pod.py  exp030_train.py  exp030_wave1.sh  exp030_wave2.sh  exp031_generate.sh  exp031_launch_gec_gen.py  exp032_count_tokens.py  exp032_deploy.sh  exp032_extend_tokenizer.py  exp032_extend_tokenizer_v2.py  exp032_launch_pod.py  exp032_train_stage.py  exp032_train_stages567.py  exp032_upload_and_test.py  exp032_verify_from_hf.py  exp033_benchmark_10b.py  exp033_benchmark_20b.py  exp033_benchmark_kazakh.py  exp033_extra_bench.py  exp033_inference_all.py  exp033_retry_bench.py  exp034_sft_mgpt_kazakh.py  exp035_run.sh  exp035_translate_pretrain.py  exp035_translate_sft_lora.py  exp037_ppl_scoring.md  exp039_gec_qwen_500m.py  exp039_gec_qwen_500m_v2.py  exp040_gec_qwen_500m_v3.py  exp041_gec_kto_v4.py  gec_benchmark_v3.json  gec_benchmark_v4.json  (+40 more)
autoresearch/5090/: bench_5090.py  prepare.py  pyproject.toml
gec-paper/: .gitignore  README.md  pyproject.toml
gec-paper/configs/: round1_nllb_baseline.yaml  round2_nllb_organic.yaml  round2_tagger.yaml  round3_ablation_morph.yaml
gec-paper/paper/: main.tex
gec-paper/scripts/: collect_social_data.py  collect_wiki_edits.py  generate_multi_ref.py  generate_synthetic.py  generate_synthetic_rulebased.py  mix_dataset.py  run_pipeline.py  run_scoring.py  train_morph_segmenter.py  train_nllb.py  train_tagger.py
gec-paper/src/gecpaper/: pipeline.py
gec-paper/src/gecpaper/models/: edit_tagger.py  nllb_gec.py
gec-paper/src/gecpaper/morph/: apertium.py  segmenter.py
gec-paper/src/gecpaper/scoring/: analysis.py  benchmark.py  metrics.py
gec-paper/src/gecpaper/taxonomy/: classifier.py  schema.py
gec-paper/tests/: test_edit_tags.py  test_metrics.py  test_morph.py  test_pipeline.py  test_taxonomy.py
kz-calm/: README.md  pyproject.toml
kz-calm/configs/: base.yaml
kz-calm/configs/experiments/: exp001_baseline.yaml  exp001_sanity.yaml  exp002_mel.yaml  exp003_matcha.yaml  exp003_matcha_overfit.yaml
kz-calm/docs/: PRD.md  postmortem_exp001_exp002.md
kz-calm/docs/plans/: 2026-02-22-matcha-tts-kazakh-design.md  2026-02-22-matcha-tts-kazakh.md
kz-calm/eval/: golden_phrases.txt  numbers_set.txt  prosody_set.txt
kz-calm/scripts/: _upload_readme_codes.py  cosyvoice_extract_with_sf.py  decode_diagnostic.py  encode_mimi_remote.py  extract_mels.py  extract_mels_char.py  infer_matcha.py  launch_data_prep.sh  overfit_test.py  preextract_latents.py  prepare_cosyvoice_data.py  prepare_data.py  prepare_tts_data_remote.py  run_cosyvoice_pipeline.sh  setup_cosyvoice.sh  test_checkpoint.py  test_matcha_checkpoint.py  train_baseline_remote.py  train_tokenizer.py  train_tokenizer_remote.py
kz-calm/src/kzcalm/: __init__.py  evaluate.py  inference.py  train.py  train_matcha.py
kz-calm/src/kzcalm/codec/: mel.py  mimi.py
kz-calm/src/kzcalm/data/: dataset.py  normalizer.py  qc.py
kz-calm/src/kzcalm/model/: backbone.py  code_embedding.py  duration_predictor.py  flow_head.py  mas.py  matcha.py  text_encoder.py  unet_1d.py  voice_prompt.py
kz-calm/src/kzcalm/tokenizer/: char_tokenizer.py  sp_tokenizer.py
kz-calm/tests/: test_duration_predictor.py  test_mas.py  test_matcha.py  test_text_encoder.py  test_train_matcha.py  test_unet_1d.py
omniaudio/: README.md  pyproject.toml  transcribe.py
omniaudio/configs/: base.yaml  cloud_stage1.yaml  cloud_stage2.yaml  stage1_alignment.yaml  stage2_finetune.yaml  v2_base.yaml  v2_base_kaznu.yaml  v2_llm150m_ctc.yaml  v2_llm150m_ctc_cloudrift.yaml  v2_llm150m_e2e_cloudrift.yaml  v2_llm150m_e2e_morphbpe100k_fleursnorm_long15_cloudrift.yaml  v2_llm150m_h100.yaml  v2_llm1b_ctc.yaml  v2_llm1b_ctc_cloudrift.yaml  v2_llm1b_e2e_cloudrift.yaml  v2_llm1b_h100.yaml  v2_llm300m_ctc_cloudrift.yaml  v2_llm300m_e2e_cloudrift.yaml  v2_llm300m_e2e_fast_cloudrift.yaml  v2_llm300m_e2e_morphbpe100k_fleursnorm_long15_cloudrift.yaml  v2_llm50m_ctc.yaml  v2_llm50m_ctc_cloudrift.yaml  v2_llm50m_e2e_cloudrift.yaml  v2_llm50m_e2e_morphbpe100k_cloudrift.yaml  v2_llm50m_e2e_morphbpe100k_fleursnorm_chunk15_eval.yaml  v2_llm50m_e2e_morphbpe100k_fleursnorm_cloudrift.yaml  v2_llm50m_e2e_morphbpe100k_fleursnorm_long15_cloudrift.yaml  v2_llm50m_e2e_morphbpe100k_fleursnorm_long45_eval.yaml  v2_llm50m_e2e_unfreeze2_cloudrift.yaml  v2_llm50m_h100.yaml  v2_llm50m_pure_ce_cloudrift.yaml  v2_llm600m_ctc.yaml  v2_llm600m_ctc_cloudrift.yaml  v2_llm600m_e2e_cloudrift.yaml  v2_llm600m_e2e_morphbpe100k_fleursnorm_long15_multigpu_cloudrift.yaml  v2_llm600m_e2e_morphbpe100k_fleursnorm_long15_multigpu_localllm_cloudrift.yaml  v2_llm600m_h100.yaml  v2_medium_s1.yaml  v2_medium_s2.yaml  v2_medium_s3.yaml  (+24 more)
omniaudio/scripts/: TPU_TRAINING_STATE.md  cloudrift_train.py  launch_h100_all.sh  monitor_tpu_training.sh  setup_tpu.sh  smoke_test_h100.sh  train_ctc_tpu.py
omniaudio/src/omniaudio/: __init__.py  augment.py  data.py  data_v2.py  evaluate.py  evaluate_v2.py  model.py  model_v2.py  train.py  train_v2.py
omniaudio/tests/: test_augment.py  test_data.py  test_data_v2.py  test_model.py  test_model_v2.py
(+932 files in other folders)
