[project]
name = "slm"
version = "0.1.0"
description = "Small Language Model for Kazakh language via DAPT"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Saken Tukenov"},
]

dependencies = [
    "torch>=2.11.0",
    "transformers>=5.7.0",
    "datasets>=4.8.5",
    "accelerate>=1.13.0",
    "tokenizers>=0.23.1",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "huggingface-hub>=1.13.0",
    "sentencepiece>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "pytest>=9.0.3",
]
cloud = [
    "vastai>=1.0.8",
]
audio_collect = [
    "yt-dlp>=2026.3.17",
    "demucs>=4.0.1",
    "faster-whisper>=1.2.1",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "noisereduce>=3.0.3",
    "numpy>=2.2.6",
]
review = [
    "streamlit>=1.57.0",
    "soundfile>=0.13.1",
    "numpy>=2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slm"]

[tool.ruff]
target-version = "py310"
line-length = 120
