[project]
name = "omniaudio"
version = "0.1.0"
description = "Kazakh ASR omni-model: decode-only audio-to-text"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Saken Tukenov"}]

dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.28",
    "torchaudio>=2.1",
    "librosa>=0.10",
    "soundfile>=0.12",
    "huggingface-hub>=0.22",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "jiwer>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniaudio"]

[tool.ruff]
target-version = "py310"
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
